# tarotai-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  apprunner.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_time_of_birth_known.py  b2c3d4e5f6a7_add_language.py  c3d4e5f6a7b8_add_is_admin.py  d4e5f6a7b8c9_add_has_subscribed_before.py  d5296c175c2b_initial_tables.py  e5f6a7b8c9d0_add_horoscopes_and_fcm.py  f6a7b8c9d0e1_add_gender_relationship_occupation.py
scripts/: e2e_test.sh  seed_cards.py  update_card_images.py
src/core/: config.py  database.py  firebase.py  limiter.py  redis.py
src/middleware/: auth.py
src/models/: __init__.py  chat.py  horoscope.py  reading.py  tarot_card.py  user.py
src/routes/: auth.py  cards.py  chat.py  cron.py  daily_card.py  horoscope.py  razorpay_webhook.py  readings.py  subscription.py
src/schemas/: reading.py  user.py
src/services/: card_service.py  prokerala_service.py  razorpay_service.py  reading_service.py
